bugfix: TASK-020 busca por owner via query param (#137)
* bugfix: TASK-020 alterar busca por owner de path param para query param

- GET /api/v1/restaurants?ownerId={id} conforme critério do backlog
- Remove endpoint /owner/{ownerId} (path param)
- Unifica com findAll (sem ownerId lista todos, com ownerId filtra)
- Atualiza testes unitários, integração, collection e run.sh
- 238 testes passando

* style: corrigir warnings SonarCloud no RestaurantController e RestaurantControllerTest

- Remove @ApiResponses wrapper (usa responses inline no @Operation)
- Substitui collect(Collectors.toList()) por .toList()
- Usa static import para when() (Mockito)
- Substitui int literal por Month enum no LocalDateTime.of()